table alignment fix

--- a/app/assets/stylesheets/scss/redesign/_override.scss
+++ b/app/assets/stylesheets/scss/redesign/_override.scss
@@ -4384,3 +4384,12 @@ td .media.chat-item{
 .bmro-task-width-new-account{
   width:30%;
 }
+
+.no-data-dash-alignment{
+  text-align: center;
+}
+
+.no-data-dash-alignment span {
+  float: none;
+  margin-left: 0px;
+}
